--- a/views/layouts/layout.ejs
+++ b/views/layouts/layout.ejs
@@ -1,15 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>EJS-TEST</title>
-</head>
-<body>
-  Before
-  <br>
-  <%- body %>
-  <br>
-  After
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>EJS-TEST</title>
+  </head>
+  <body>
+    Before
+    <br />
+    <h1><%= title %></h1>
+    <p><%= description %></p>
+    <br />
+    <%= body %>
+    <br />
+    After
+  </body>
 </html>
