--- a/views/authors/index.ejs
+++ b/views/authors/index.ejs
@@ -1,1 +1,18 @@
-All Authors
+<h2 class="page-header">Search Authors</h2>
+<form action="/authors" method="GET">
+  <div class="form-row">
+    <div class="form-item">
+      <label>Name</label>
+      <input type="text" name="name3" value="<%= searchOptions2.name %>" />
+    </div>
+  </div>
+  <div class="form-row form-row-end">
+    <button class="btn btn-primary" type="submit">Search</button>
+  </div>
+</form>
+<br />
+<% authors2.forEach(author => { %>
+<div class="author-row">
+  <div class="author-name"><%= author.name %></div>
+</div>
+<% }) %>
