feat: initial book route

--- a/views/authors/index.ejs
+++ b/views/authors/index.ejs
@@ -2,7 +2,7 @@
 <form action="/authors" method="GET">
   <div class="form-row">
     <div class="form-item">
-      <label>Name</label>
+      <label>Author</label>
       <input type="text" name="name3" value="<%= searchOptions2.name %>" />
     </div>
   </div>
