--- a/views/layouts/layout.ejs
+++ b/views/layouts/layout.ejs
@@ -4,10 +4,13 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>EJS-TEST</title>
+
+    <link rel="stylesheet" href="../../css/site.css" class="style">
   </head>
   <body>
     <%- include('../partials/header.ejs') %> 
     <%- include('../partials/errorMessage.ejs') %> 
+    <%- body %>
     <%- body %>
   </body>
 </html>
