--- a/public/css/site.css
+++ b/public/css/site.css
@@ -1,3 +1,8 @@
+@import url('https://fonts.googleapis.com/css?family=Raleway:300,400');
+@import url('https://fonts.googleapis.com/css?family=Metal+Mania');
+
 * {
-  color: pink;
+  box-sizing: border-box;
+  font-family: Raleway;
+  color: #777;
 }
