--- a/views/books/_form_fields.ejs
+++ b/views/books/_form_fields.ejs
@@ -1,12 +1,48 @@
-<label>Title</label> 
-<input type="text" name="title" value="<%= theBook.title %>" />
-<label>Author</label> 
-<select name="author">
-  <% allAuthors.forEach(author => { %>
-    <% if (author.id === theBook.author) { %>
-      <option selected label="<%= author.name %>" value="<%= author.id %>">
-    <% } else { %>
-      <option label="<%= author.name %>" value="<%= author.id %>">
-    <% } %>
-  <% }) %>
-</select>
+<div>
+  <label>Title</label>
+  <input type="text" name="title" value="<%= theBook.title %>" />
+</div>
+
+<div>
+  <label>Author</label>
+  <select name="author">
+    <% allAuthors.forEach(author => { %> <% if (author.id === theBook.author) {
+    %>
+    <option selected label="<%= author.name %>" value="<%= author.id %>">
+      <% } else { %> </option
+    ><option label="<%= author.name %>" value="<%= author.id %>">
+      <% } %> <% }) %>
+    </option></select
+  >
+</div>
+
+<div>
+  <label>Publish Date</label>
+  <input
+    type="date"
+    name="publishDate"
+    value="<%= theBook.publishDate == null ? '' : theBook.publishDate.toISOString().split('T')[0] %>"
+  />
+</div>
+
+<div>
+  <label>Page Count</label>
+  <input
+    type="number"
+    name="pageCount"
+    min="1"
+    value="<%= theBook.pageCount %>"
+  />
+</div>
+
+<div>
+  <label>Cover</label>
+  <input type="file" name="cover" />
+</div>
+
+<div>
+  <label>Description</label>
+  <textarea name="description">
+    <%= theBook.description %>
+    </textarea>
+</div>
