--- a/views/books/index.ejs
+++ b/views/books/index.ejs
@@ -1,1 +1,26 @@
-<h3>All Books</h3>
+<h2 class="page-header">Search Books</h2>
+<form action="/books" method="GET">
+  <div class="form-row">
+    <div class="form-item">
+      <label>Book</label>
+      <input type="text" name="title" value="<%= searchOptions2.title %>" />
+    </div>
+    <!-- <div class="form-item">
+      <label>Published After</label>
+      <input type="date" name="publishedAfter" value="<%= searchOptions2.publishedAfter %>" />
+    </div>
+    <div class="form-item">
+      <label>Published Before</label>
+      <input type="date" name="publishedBefore" value="<%= searchOptions2.publishedBefore %>" />
+    </div> -->
+  </div>
+  <div class="form-row form-row-end">
+    <button class="btn btn-primary" type="submit">Search</button>
+  </div>
+</form>
+<br />
+<% books2.forEach(book => { %>
+<div class="book-row">
+  <div class="book-name"><%= book.title %></div>
+</div>
+<% }) %>
