initial authors View/Edit/Delete

--- a/views/authors/index.ejs
+++ b/views/authors/index.ejs
@@ -15,4 +15,13 @@
 <div class="author-row">
   <div class="author-name"><%= author.name %></div>
 </div>
+<div>
+  <a href="/authors/<%= author.id %>">View</a>
+
+  <a href="/authors/<%= author.id %>/edit">Edit</a>
+
+  <form action="/authors/<%= author.id %>?_method=DELETE" method="post">
+    <button type="submit">Delete</button>
+  </form>
+</div>
 <% }) %>
