--- a/views/books/index.ejs
+++ b/views/books/index.ejs
@@ -31,6 +31,7 @@
 <% books2.forEach(book => { %>
 <div class="book-row">
   <div class="book-title"><%= book.title %></div>
+  <div class="book-title"><%= book.author %></div>
   <div class="book-img">
     <img
       height="150"
